hphp/hack/test/typecheck/coeffects/experimental_gating.php
<?hh

function f(
  (function (float)[bool]: void) $l
)[int]@{ string }: void {
  $y = ($i)[arraykey] ==> {};
}
